# smtp-hs

./: .gitignore  README.md  cabal.project  hie.yaml  smtp-hs.cabal
src/Codec/: MIME.hs
src/Codec/MIME/: Boundary.hs  ContentTransferEncoding.hs  ContentTypes.hs  Disposition.hs  MediaTypes.hs  QuotedPrintable.hs  TextEncoding.hs
src/Control/Monad/: Email.hs
src/Network/: SMTP.hs
src/Network/SMTP/: Auth.hs  Command.hs  Email.hs  Response.hs
src/Network/SMTP/Email/: Parse.hs
tests/: codec-tests.hs  email-tests.hs
