cabal-version: 3.0
name:          smtp-hs
version:       0.0.2
homepage:      https://github.com/mixphix/smtp-hs
bug-reports:   https://github.com/mixphix/smtp-hs/issues
license:       BSD-3-Clause
license-file:  LICENSE
author:        Melanie Brown
maintainer:    brown.m@pm.me
copyright:     2021-2023 Melanie Brown
category:      Network
build-type:    Simple
stability:     alpha
synopsis:
  A self-contained library for working with MIME and sending email via SMTP.

common shared
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DerivingStrategies
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes
    RecordWildCards
    TypeFamilies
    ViewPatterns

  ghc-options:        -O2 -Wall
  build-depends:
    , base        >=4.14 && <5
    , containers
    , filepath
    , mtl
    , text

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    Codec.MIME
    Codec.MIME.Boundary
    Codec.MIME.ContentTransferEncoding
    Codec.MIME.ContentTypes
    Codec.MIME.Disposition
    Codec.MIME.QuotedPrintable
    Codec.MIME.TextEncoding
    Control.Monad.Email
    Network.SMTP
    Network.SMTP.Auth
    Network.SMTP.Command
    Network.SMTP.Email
    Network.SMTP.Email.Parse
    Network.SMTP.Response

  build-depends:
    , base16-bytestring
    , base64-bytestring
    , blaze-html
    , bytestring
    , connection
    , cryptonite
    , http-types
    , memory
    , MonadRandom
    , network
    , network-bsd
    , parsec
    , random             >=1.2.0
    , template-haskell
    , time
    , time-compat
    , yesod-content-pdf

test-suite codec-tests
  import:         shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        codec-tests.hs
  ghc-options:    -threaded
  build-depends:
    , hspec
    , smtp-hs

test-suite email-tests
  import:         shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        email-tests.hs
  ghc-options:    -threaded
  build-depends:
    , hspec
    , network
    , network-bsd
    , QuickCheck
    , shakespeare
    , smtp-hs
    , template-haskell
